--- a/styles/components/_testimonials.scss
+++ b/styles/components/_testimonials.scss
@@ -26,22 +26,19 @@
     text-transform: uppercase;
     line-height: 0.8;
     text-align: center;
-    max-width: rem(550);
-    outline: 1px solid red;
+    max-width: 50%;
 }
 .testimonial__card-second {
     display: none;
-    outline: 1px solid red;
 
     @include layout(tablet) {
         @include testimonial;
-        max-width: rem(550);
     }
 }
 .testimonial__card-third {
     display: none;
     max-width: rem(550);
-    outline: 1px solid red;
+
     @include layout(desktop) {
         @include testimonial;
     }
